--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,10 +27,12 @@ dist.dir=dist
 dist.jar=${dist.dir}/TrabalhoPGBD.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.jsoup-1.10.1.jar=/home/arthurhoch/NetBeansProjects/Main/jsoup-1.10.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.MySQLDriver.classpath}
+    ${libs.MySQLDriver.classpath}:\
+    ${file.reference.jsoup-1.10.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
