Inserido o .jar da biblioteca Jsoup

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=TrabalhoPGBD
+application.vendor=Douglas
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,8 +27,9 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/TrabalhoPGBD.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
-file.reference.jsoup-1.10.1.jar=/home/arthurhoch/NetBeansProjects/Main/jsoup-1.10.1.jar
+file.reference.jsoup-1.10.1.jar=C:\\Users\\Douglas\\Documents\\NetBeansProjects\\Main\\jsoup-1.10.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
