--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,11 +30,13 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.jsoup-1.10.1.jar=C:\\Users\\Douglas\\Documents\\NetBeansProjects\\Main\\jsoup-1.10.1.jar
+file.reference.jsoup-1.10.1.jar-1=/home/arthurhoch/NetBeansProjects/Main/jsoup-1.10.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
-    ${file.reference.jsoup-1.10.1.jar}
+    ${file.reference.jsoup-1.10.1.jar}:\
+    ${file.reference.jsoup-1.10.1.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
