--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -32,13 +32,15 @@ endorsed.classpath=
 excludes=
 file.reference.jsoup-1.10.1.jar=C:\\Users\\Douglas\\Documents\\NetBeansProjects\\Main\\jsoup-1.10.1.jar
 file.reference.jsoup-1.10.1.jar-1=/home/arthurhoch/NetBeansProjects/Main/jsoup-1.10.1.jar
+file.reference.jsoup-1.10.1.jar-2=C:\\Users\\will\\Downloads\\jsoup-1.10.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
     ${file.reference.jsoup-1.10.1.jar}:\
     ${file.reference.jsoup-1.10.1.jar-1}:\
-    ${libs.eclipselink.classpath}
+    ${libs.eclipselink.classpath}:\
+    ${file.reference.jsoup-1.10.1.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
