--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,13 +30,15 @@ dist.jar=${dist.dir}/TrabalhoPGBD.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.jsoup-1.10.1.jar=C:\\Users\\will\\Downloads\\jsoup-1.10.1.jar
 file.reference.jsoup-1.10.1.jar-1=/home/arthurhoch/NetBeansProjects/Main/jsoup-1.10.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
     ${file.reference.jsoup-1.10.1.jar-1}:\
-    ${libs.eclipselink.classpath}
+    ${libs.eclipselink.classpath}:\
+    ${file.reference.jsoup-1.10.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
